kubernetes/base/network-policies/calico/flux-system.yaml
# This policy allows all pods within the flux-system to communicate freely
# and allows them to perform DNS lookups.
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-flux-system
  namespace: flux-system
spec:
  # This selects all pods in the flux-system namespace
  selector: all()
  order: 50
  types:
    - Ingress
    - Egress
  # Allow all incoming traffic from other pods in the same namespace
  ingress:
    - action: Allow
      source:
        selector: all()
  # Allow all outgoing traffic to other pods in the same namespace AND to CoreDNS
  egress:
    - action: Allow
      destination:
        selector: all()
    - action: Allow
      protocol: UDP
      destination:
        namespaceSelector: name == 'kube-system'
        selector: k8s-app == 'kube-dns'
        ports:
          - 53
    - action: Allow
      protocol: TCP
      destination:
        namespaceSelector: name == 'kube-system'
        selector: k8s-app == 'kube-dns'
        ports:
          - 53
