kubernetes/base/network-policies/calico/kube-system.yaml
# This single, definitive policy allows the kube-system to function.
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-kube-system
  namespace: kube-system
spec:
  # This policy applies to all pods within the kube-system namespace
  selector: all()
  order: 50
  types:
    - Ingress
    - Egress

  # Define rules for INCOMING traffic
  ingress:
    # Allow any pod in the cluster to send DNS requests TO CoreDNS pods
    - action: Allow
      protocol: UDP
      destination:
        selector: k8s-app == 'kube-dns'
        ports:
          - 53
    - action: Allow
      protocol: TCP
      destination:
        selector: k8s-app == 'kube-dns'
        ports:
          - 53

  # Define rules for OUTGOING traffic
  egress:
    # Allow all pods in kube-system to talk to the Kubernetes API server
    - action: Allow
      destination:
        services:
          name: kubernetes
          namespace: default
